# aquifer

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AUDIT_FINDINGS_BY_FILE.md  AUDIT_INDEX.md  AUDIT_SUMMARY.txt  CHANGELOG.md  CODE_AUDIT_REPORT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  QUICK_FIX_CHECKLIST.md  README.md  ROADMAP.md  STARTME.txt  demo.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
aquifer/: __init__.py  __main__.py  api_client.py  cli.py  config.py  core.py  licensing.py  watchfolder.py
aquifer/analytics/: engine.py  routes.py
aquifer/dashboard/: app.py
aquifer/dashboard/templates/: base.html  error.html  file_detail.html  files.html  index.html  review.html  upload.html
aquifer/engine/: pipeline.py  reconciler.py  tokenizer.py
aquifer/engine/detectors/: ner.py  ocr.py  patterns.py
aquifer/engine/extractors/: docx.py  image.py  pdf.py  text.py
aquifer/fhir/: exporter.py  routes.py
aquifer/format/: reader.py  schema.py  writer.py
aquifer/integrations/: open_dental.py
aquifer/patient_app/: form_filler.py  health_import.py  health_passport.py  routes.py
aquifer/pwa/: app.html  manifest.json  sw.js
aquifer/rehydrate/: engine.py
aquifer/strata/: __init__.py  auth.py  cloud_vault.py  config.py  database.py  db_postgres.py  jobs.py  notifications.py  patient_hub.py  responses.py  server.py  sync.py
aquifer/strata/routes/: __init__.py  audit_routes.py  auth_routes.py  checkin_routes.py  dashboard_routes.py  deid_routes.py  files_routes.py  patient_routes.py  practice_routes.py  vault_routes.py
aquifer/strata/templates/: base.html  checkin.html  file_detail.html  files.html  home.html  login.html  patient_detail.html  patients.html  register.html  settings.html  transfers.html  upload.html
aquifer/vault/: auto_sync.py  encryption.py  models.py  store.py  sync_client.py
docs/: AQF_FORMAT_SPEC.md  ARCHITECTURE.md  DEPLOYMENT.md  HIPAA_COMPLIANCE.md  PITCH_DECK.md  STRATA_PROTOCOL.md
nginx/: nginx.conf
nginx/conf.d/: aquifer.conf
scripts/: deploy.sh  docker-start.sh
tests/: generate_dental_stress.py  generate_synthetic.py  test_analytics.py  test_auth_hardening.py  test_auto_sync.py  test_checkin.py  test_core.py  test_csv_pipeline.py  test_dashboard.py  test_db_postgres.py  test_detectors.py  test_edge_cases.py  test_error_scenarios.py  test_extractors.py  test_fhir_bridge.py  test_form_filler.py  test_format.py  test_health_import.py  test_health_passport.py  test_jobs.py  test_licensing.py  test_load.py  test_ner_integration.py  test_notifications.py  test_open_dental.py  test_patient_api.py  test_patient_app_routes.py  test_patient_hub.py  test_pipeline.py  test_pwa.py  test_rehydrate.py  test_strata.py  test_stress.py  test_sync.py  test_sync_integration.py  test_synthetic_batch.py  test_tokenizer.py  test_vault.py  test_watchfolder.py
tests/fixtures/: edge_cases.txt  sample_claim.json  sample_clinical_note.txt  sample_dental_record.docx  sample_patients.csv
