[project]
name = "aquifer"
version = "0.1.0"
description = "HIPAA de-identification engine with portable medical data format"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
authors = [
    {name = "Aquifer Health", email = "hello@aquifer.health"},
]
maintainers = [
    {name = "Aquifer Health", email = "hello@aquifer.health"},
]
keywords = ["hipaa", "phi", "de-identification", "medical", "dental", "healthcare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1",
    "PyMuPDF>=1.23",
    "python-docx>=1.1",
    "Pillow>=10.0",
    "zstandard>=0.22",
    "cryptography>=42.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.5",
]

[project.optional-dependencies]
ner = ["spacy>=3.7"]
ocr = ["pytesseract>=0.3"]
server = []  # Reserved for Strata hosted-API dependencies
all = ["aquifer[ner]", "aquifer[ocr]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "httpx",
    "spacy>=3.7",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
aquifer = "aquifer.cli:cli"

[project.urls]
Homepage = "https://github.com/aquifer-health/aquifer"
Documentation = "https://github.com/aquifer-health/aquifer#readme"
Changelog = "https://github.com/aquifer-health/aquifer/releases"
Issues = "https://github.com/aquifer-health/aquifer/issues"
Source = "https://github.com/aquifer-health/aquifer"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aquifer", "aquifer.*"]
exclude = ["tests*", "aquifer-claims*"]

[tool.setuptools.package-data]
aquifer = [
    "dashboard/templates/*.html",
    "dashboard/static/**/*",
    "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
